--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
-    "styled-system": "^5.1.5"
+    "react-hook-form": "^7.39.5",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
